# AoBot

./: .env.dev  .gitignore  README.md  bot.py  plugins.json  pyproject.toml  requirements.txt
KurumiBot/plugins/RSS/: config.py
KurumiBot/plugins/analysis_bilibili/: __init__.py
KurumiBot/plugins/mangatimekirara/: fuz.proto  fuz_pb2.py  requirements.txt  test.py
aobot/plugins/RSS/: __init__.py
aobot/plugins/RSS/command/: change_dy.py
aobot/plugins/twitter/: config.py
data/RSS/: mangatimekirara.json  rss.json
data/word_bank/: bank.json
