[project]
name = "AoBot"
version = "0.1.0"
description = "AoBot"
readme = "README.md"
requires-python = "^3.8"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
# plugins = ["nonebot_plugin_manager"]
# plugin_dirs = ["aobot/plugins"]
builtin_plugins = []
plugins = ["haruka_bot"]
